[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.23.0",
    "boto3>=1.42.7",
    "firebase-admin>=7.1.0",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]